--- a/src/main/webapp/resources/css/listarPedido.css
+++ b/src/main/webapp/resources/css/listarPedido.css
@@ -2,8 +2,6 @@
     Author: Marcela Cardoso
 */
 
-
-
 body {
     background: url("../imagens/mesa.jpg") no-repeat;
     background-size: cover;
@@ -16,12 +14,15 @@ body {
     width: 100%;
     height: 100%;    
 }
+.botaoDetalhar{
+     color: black!important;
+    background:darkseagreen!important;
+}
 .ui-datatable th, .ui-paginator {
     color: #ffffff !important;
     background: #570359 !important;
     font-weight: bold !important;
 }
-
 .ui-datatable-odd {
     color: #111111 !important;
     background: thistle !important;
@@ -30,19 +31,4 @@ body {
 .ui-paginator-pages a, .ui-paginator-first, .ui-paginator-prev, .ui-paginator-next, .ui-paginator-last {
     color: #ffffff !important;
     background: mediumorchid !important;
-}
-
-.botaoAlterar{
-    color: black!important;
-    background:darkseagreen!important;
-}
-
-.botaoDeletar{
-   color: black!important;
-    background:darkseagreen!important;
-}
-
-.botaoVoltar{
-   color: black!important;
-    background:darkseagreen!important;
 }
